Updated footer address

--- a/@core/.env
+++ b/@core/.env
@@ -1,8 +1,8 @@
-APP_NAME=Nexelit
+APP_NAME=Swiftpass
 APP_ENV=production
 APP_KEY=base64:1wy3vbqvu0NyfqN5i6gFvFQapA2YHxIPbqeyzyiL3aY=
 APP_DEBUG=false
-APP_URL=http://localhost
+APP_URL=https://swiftpassglobalimmigration
 
 LOG_CHANNEL=stack
 
