Removed preloader and tried to improve performance by removing some css and scripts

--- a/@core/.env
+++ b/@core/.env
@@ -1,8 +1,8 @@
-APP_NAME=Swiftpass
+APP_NAME=SwiftpassGlobalImmigration
 APP_ENV=production
 APP_KEY=base64:1wy3vbqvu0NyfqN5i6gFvFQapA2YHxIPbqeyzyiL3aY=
 APP_DEBUG=false
-APP_URL=https://swiftpassglobalimmigration
+APP_URL=https://swiftpassglobalimmigration.com
 
 LOG_CHANNEL=stack
 
